added rules for range and inclusion validation

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,7 @@
 en:
   param_check:
     missing_required_parameter: "Missing required parameter: %{parameter}"
-    invalid_parameter: "Parameter %{parameter} is invalid. Expected %{expected} got %{got}"
+    invalid_parameter: "Parameter %{parameter} is invalid. Expected %{expected}, got %{got}"
+    invalid_minimum: "Parameter %{parameter} must be at least %{min}, got %{got}"
+    invalid_maximum: "Parameter %{parameter} must not be more than %{max}, got %{got}"
+    invalid_inclusion: "Parameter %{parameter} is not in the list. Expected inclusion in %{expected}, got %{got}"
